--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
         <div class="jumbotron">
             <div class="row">
                 <div class="col-md-12 game">
-                    <h1 style="text-align: center;">South Park GIFs!</h1>
-                    <div id="spButtons"></div>
-                    <div>
-                        <form id="spCharacter">	
+                    <h1 id="title">Pixar Movie GIFs!</h1>
+                    <div id="buttons"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 game">
+                    <div id="movieInput">
+                        <form id="pixarMovie">	
                         <label>Search Another: </label>
-                        <input type="text" id="spInput"><br>
-                        <input id="spCharacterSubmit" type="submit" value="Submit">
+                        <input type="text" id="pixarInput">
+                        <input id="pixarMovieSubmit" type="submit" value="Submit">
                     </div>
-                    <div id="spGIFs"></div>
+                    <div id="pixarGIFs"></div>
                 </div>
             </div>
         </div>
