--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <input id="pixarMovieSubmit" type="submit" value="Submit">
                     </div>
                     <div id="pixarGIFs"></div>
+                    <div><button id="more">Load More</button></div>
                 </div>
             </div>
         </div>
